deps/v8/test/message/fail/let-lexical-declaration-destructuring-brace-in-single-statement.out
*%(basename)s:5: SyntaxError: Lexical declaration cannot appear in a single-statement context
with ({}) let {a: x} = {a: 42};
          ^^^
SyntaxError: Lexical declaration cannot appear in a single-statement context
